Fix modal dialog width on mobiles

--- a/css/mod_b3_mediabox.scss
+++ b/css/mod_b3_mediabox.scss
@@ -1,6 +1,6 @@
 #b3Mediabox {
     .modal-dialog {
-        max-width: calc(100vw - 1rem);
+        max-width: calc(100vw - 2rem);
     }
 
     .modal-content {
